# codesnippet

./: .gitignore  README.md  read2012.md
algo/: bst.cpp  bst.h  mergesort.cpp  quicksort.cpp  range.cpp  rbt.cpp  rbt.h
c51/key/: key.cbp  key.depend  key.layout  main.c
cpp/: CMakeLists.txt  array.cpp  boost.cpp  bounded_channel.h  byte.cpp  cn.cpp  code.cpp  com.cpp  const.cpp  cxx23.cpp  cxx_jthread.cpp  cycle_main.cpp  cycle_thread.cpp  cycle_thread.h  datetime.cpp  deduct.cpp  delete.cpp  det.cpp  dolua.c  emplace.cpp  expr.cpp  find.cpp  for.cpp  format.cpp  fs.cpp  item26.cpp  iterator.cpp  json.cpp  let5.c  makefile  move.cpp  multimap.cpp  multmap.cpp  normal.cpp  pri.cpp  print_thread_id.c  queue.cpp  random.cpp  range_demo.cpp  reg.cpp  (+14 more)
cpp/cpp20/: CMakeLists.txt  helloworld.cpp
cpp/kafka/: consumer.cpp  producer.cpp
cpp/opencv/: CMakeLists.txt  show_image.cpp  video.cpp
cpp/thread/: CMakeLists.txt  cv.cpp  main.cpp
cs107/: Makefile  absdiff.c  exchange.c  hostinfo.c  kill.c  main1.c  mstore.c  obj.cpp  open_close.c  overflow.c  readdir.c  show_bytes.c  size.c  snooze.c  statcheck.c  sum.c  tiny.c  write.c
cs107/cgi-bin/: first.cpp
cs110/: basic_fork.c  confused_extroverts.c  copy.c  dining_philosophers_with_busy_waiting.cc  dining_philosophers_with_condition_variable.cc  dining_philosophers_with_deadlock.cc  dining_philosophers_with_semaphore.cc  exit_utils.c  exit_utils.h  extroverts.c  five-children.c  fork_puzzle.c  greeters.cc  indistinguishable-pentuplets.c  introverts.c  introverts.cc  job_list_syncrhonization.c  job_list_syncrhonization_improved.c  kill_puzzle.c  list.c  mysystem.c  ostreamlock.cc  ostreamlock.h  parent_child.c  pentuplets.c  random_generator.h  reader_writer.cc  reap_as_they_exit.c  reap_in_fork_order.c  search.c  semaphore.cc  semaphore.h  separate.c  simplesh.c  subprocess.c  t.c  thread_utils.h  tickets.cc
dlang/: hello.d
doc/: books.md  lua_basic_learning.md  markdown_syntax_highlight.md
docker/: Dockerfile
ffmpeg/: ffplay_simple.c  packet_queue.cpp  packet_queue.h  sdl2_tutorial01.cpp  tutorial01.c  tutorial01.cpp  tutorial02.cpp
golang/: randbytes.go  update.go
golang/smp/mlib/: manager.go
golang/src/: fib.go  fs.go  hello.go  http.go  js.go  main.go
golang/src/example/: example.go
golang/src/hello/concurrency/: concurrency.go
golang/src/hello/container/: container.go
golang/src/hello/ctl/: ctl.go
golang/src/hello/func/: func.go
golang/src/hello/oo/: oo.go
golang/src/hello/pointer/: pointer.go
golang/src/hello/var/: var.go
golang/src/network/: resolve.go
groovy/: xiny.groovy
html/: app.html  index.css  index.html
java/src/com/angtylook/demo/: FileDemo.java
js/: array.js  conversion.js  function.js  index.js  new.js  object.js  requestHandler.js  router.js  server.js  this.js
lazarus/: project1.lpr  project1.lps
lua/: CMakeLists.txt  IntCell.lua  arg.lua  copyfile.lua  coroutine.lua  delete_value_in_table_when_iterate.lua  factors.lua  function.lua  genfor.lua  meta.lua  moduleos.lua  nested_fun.lua  oo.lua  pil_func.lua  tur1.lua  until.lua  varargv.lua
proto/: build.bat
proto/item/base/: item.proto
proto/item/pubc/: login.proto
proto/item/storage/: data.proto
python/: 2.py  3.py  async.py  convert.py  convert_image.py  cvt_mp3.py  cvt_x265.py  datetime.py  deco2.py  deco3.py  deco_factory.py  do.py  inherit.py  listdir.py  mdtopdf.py  merge.py  page.py  param.py  redis_tutorial.py  share_view.py  static_method.py  super_init.py  touch.py
python/bluetooth/: scan.py
python/cv/: cv_blur.py  cv_denoisy.py  cv_draw.py  cv_edge.py  cv_filter.py  cv_hist.py  cv_hist_equal.py  cv_image_demo.py  cv_morp.py  cv_pyramid.py  cv_resize.py  cv_threshold.py  cv_util.py
python/flet/: custom.py  main.py
python/hcl/: py01.py
python/net/hello/: client.py  server.py
qml/: MyToolbar.qml  main.qml
shell/: args.sh  break.sh  case.sh  continue.sh  func.sh  func_args.sh  func_arr.sh  ifs.sh  redirect.sh  test_until.sh  test_while.sh
sql/: create_shop.sql
tmp/: cpstr.cpp  daytime.cpp  dtserver.cpp  fork.c  init.c  makefile  obj.cpp  oneday.cpp  refint.cpp  static.c
ts/: class.ts  datastruct.ts  func.ts  general.ts  index.html  interface.ts  obj.ts  type.ts
ts/js/: class.js  datastruct.js  func.js  general.js  index.js  interface.js  obj.js  type.js
